# Nexus-Bots_OBSOLETTED

./: .gitignore  .gitignore.bak  README.md  gitDo.sh
localization/: README.md
localization/bmx160/: platformio.ini
nexus-base/: README.md
nexus-base/documents/: desktop.ini
nexus-base/lib/MotorWheel/: MotorWheel.h  Omni4WDAction.cpp  Omni4WDAction.h.bak
nexus-base/lib/SONAR/: IR.h  SONAR.cpp  SONAR.h  SONARLST.cpp.orig  SONARLST.h.orig  URM_19200_address.pde
nexus-base/lib/SRF02/: SRF02.cpp  SRF02.h
nexus-base/lib/URM05/: Urm5parser.h
nexus-base/program/RB003_Omni3WD_PID_3SONAR/: RB003_Omni3WD_PID_3SONAR.ino
nexus-base/resources/: diagram.drawio
nexus-com/tlv_message/: Makefile
nexus-com/tlv_message/inc/: crc32.h  (+2 more)
nexus-ros/: .gitignore  README.md
nexus-ros/jetnano/: README.md  calibration.csv  gitUpdate.sh  syncTime.sh
nexus-ros/jetnano/src/control_hardware/: CMakeLists.txt
nexus-ros/jetnano/src/control_hardware/launch/: .control_robot.launch.swp  control_robot.launch
nexus-ros/jetnano/src/control_hardware/src/: control_hardware.cpp  robot_teleop_key.py
nexus-ros/jetnano/src/odometry/: CMakeLists.txt
nexus-ros/jetnano/src/odometry/launch/: odom_publish.launch
nexus-ros/jetnano/src/odometry/src/: tf_odom.cpp
nexus-ros/jetnano/src/robot_project/diff_teleop_keyboard/: CMakeLists.txt  package.xml
nexus-ros/jetnano/src/robot_project/diff_teleop_keyboard/launch/: diff_teleop_keyboard.launch  rosserial.launch
nexus-ros/jetnano/src/robot_project/diff_teleop_keyboard/src/: diff_teleop_keyboard.py
nexus-ros/linux-pc/: README.md
nexus-ros/raspi3b/: README.md
nexus-vision/: README.md  calibration_store.py  get_calib_img.py  get_calib_img_ver02.py  get_stereo_video.py  left.yml  single_calib.py  stereo_calib.py  stereo_depth.py
nexus-vision/Depthmap_Dev/: get_calib_img.py  get_calib_img_ver02.py  get_stereo_video.py
nexus-vision/data/: stereo.yml
nexus-vision/dev_cpp/: dev_cpp.sln
nexus-vision/dev_python/: README.md  disparity_map.py  disparity_map_realtime.py  get_calib_img.py  single_calib.py  stereo_calib.py  tempCodeRunnerFile.py
stereo-vision/: README.md  calib_ELPCAM.py  get_Calib_img.py  get_stereo_video.py  stereo_depth.py  test_ELPCAM.py
stereo-vision/data/: left.yml  right.yml  stereo_left.avi  stereo_right.avi
(+246 files in other folders)
